--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "dovepay-ui",
+  "name": "@lyufudi/dovepay-ui",
   "version": "1.0.0",
   "description": "dovepay front",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "npx webpack --node-env development",
+    "login": "npm login --registry http://10.1.85.22:8081/repository/npm-internal",
+    "publish": "npx webpack --node-env production && npm publish --registry http://10.1.85.22:8081/repository/npm-internal"
   },
   "repository": {
     "type": "git",
@@ -22,10 +24,21 @@
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
+    "@lyufudi/dove-utils": "latest",
     "@lyufudi/uikit": "^3.15.22",
     "@lyufudi/uikit-v2": "^2.27.5",
     "babel-loader": "^9.1.2",
+    "browser-dtector": "^3.2.0",
+    "chart.js": "^4.2.0",
+    "core-js": "^3.27.2",
+    "dom4": "^2.1.6",
+    "jquery-lts": "npm:jquery@^3.6.3",
+    "jquery-v2": "npm:jquery@^2.2.4",
+    "showmodaldialog": "^1.0.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
