--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lyufudi/dovepay-ui",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "dovepay front",
   "main": "index.js",
   "scripts": {
@@ -36,11 +36,12 @@
     "jquery-v2": "npm:jquery@^2.2.4",
     "showmodaldialog": "^1.0.0",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-merge": "^5.8.0"
   },
   "files": [
     "dist",
     "src",
-    "webpack.config.js"
+    "webpack.common.js"
   ]
 }
