--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "npx webpack --node-env development",
+    "2java": "npx webpack --node-env production",
     "login": "npm login --registry http://10.1.85.22:8081/repository/npm-internal",
     "publish": "npx webpack --node-env production && npm publish --registry http://10.1.85.22:8081/repository/npm-internal"
   },
